WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84836
[BlackBerry] OpenGL related bug fixes
https://bugs.webkit.org/show_bug.cgi?id=84836
Summary
[BlackBerry] OpenGL related bug fixes
Arvid Nilsson
Reported
2012-04-25 03:49:27 PDT
Upstream a bunch of recent OpenGL related bug fixes. This patch consists of several internal changes squashed into one. Each change was either written by Filip Spacek and reviewed internally by Arvid Nilsson, or written by Arvid Nilsson and reviewed internally by Filip Spacek =D
Attachments
Patch
(7.47 KB, patch)
2012-04-25 04:12 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2012-04-25 04:12:32 PDT
Created
attachment 138781
[details]
Patch
Arvid Nilsson
Comment 2
2012-04-25 04:14:07 PDT
George Staikos also reviewed some of these internally.
Antonio Gomes
Comment 3
2012-04-27 06:37:01 PDT
Comment on
attachment 138781
[details]
Patch Ok, but lets try to be one fix per patch next time :)
WebKit Review Bot
Comment 4
2012-04-27 07:16:50 PDT
Comment on
attachment 138781
[details]
Patch Rejecting
attachment 138781
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: mit-queue/Source/WebKit/chromium/third_party/skia/src --revision 3740 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 43>At revision 3740. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/12566065
WebKit Review Bot
Comment 5
2012-04-27 16:07:26 PDT
Comment on
attachment 138781
[details]
Patch Clearing flags on attachment: 138781 Committed
r115506
: <
http://trac.webkit.org/changeset/115506
>
WebKit Review Bot
Comment 6
2012-04-27 16:07:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug