Source/WebCore/platform/graphics/blackberry/LayerCompositingThread.cpp
@@ -229,6 +229,7 @@ void LayerCompositingThread::drawTextures(int positionLocation, int texCoordLoca
 #endif
 #if ENABLE(WEBGL)
     if (layerType() == LayerData::WebGLLayer) {
+        m_layerRenderer->addLayerToReleaseTextureResourcesList(this);
         pthread_mutex_lock(m_frontBufferLock);
         glVertexAttribPointer(positionLocation, 2, GL_FLOAT, GL_FALSE, 0, &m_transformedBounds);
         float canvasWidthRatio = 1.0f;
@@ -238,7 +239,6 @@ void LayerCompositingThread::drawTextures(int positionLocation, int texCoordLoca
         glVertexAttribPointer(texCoordLocation, 2, GL_FLOAT, GL_FALSE, 0, upsideDown);
         glBindTexture(GL_TEXTURE_2D, m_texID);
         glDrawArrays(GL_TRIANGLE_FAN, 0, 4);
-        pthread_mutex_unlock(m_frontBufferLock);
         // FIXME: If the canvas/texture is larger than 2048x2048, then we'll die here
         return;
     }
